baml_language/crates/baml_tests/snapshots/compiles/namespaces_type_resolution/baml_tests__compiles__namespaces_type_resolution__02_parser__main.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Config"
    L_BRACE "{"
    FIELD
      WORD "key"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "env"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "Error"
    L_BRACE "{"
    FIELD
      WORD "code"
      TYPE_EXPR "int"
        WORD "int"
    FIELD
      WORD "message"
      TYPE_EXPR "string"
        WORD "string"
    R_BRACE "}"
  ENUM_DEF
    KW_ENUM "enum"
    WORD "Status"
    L_BRACE "{"
    ENUM_VARIANT "Ok"
      WORD "Ok"
    ENUM_VARIANT "Failed"
      WORD "Failed"
    ENUM_VARIANT "Pending"
      WORD "Pending"
    R_BRACE "}"
  TYPE_ALIAS_DEF
    WORD "type"
    WORD "ConfigAlias"
    EQUALS "="
    TYPE_EXPR "Config"
      WORD "Config"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootIdentity"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR "{
    cfg
}"
        L_BRACE "{"
        WORD "cfg"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootConstruct"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "key"
        COLON ":"
        TYPE_EXPR "string"
          WORD "string"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Config"
      WORD "Config"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        OBJECT_LITERAL
          WORD "Config"
          L_BRACE "{"
          OBJECT_FIELD "key: key"
            WORD "key"
            COLON ":"
            WORD "key"
          COMMA ","
          OBJECT_FIELD
            WORD "env"
            COLON ":"
            STRING_LITERAL "prod"
              QUOTE """
              WORD "prod"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootEnumReturn"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "Status"
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "Status.Ok"
          WORD "Status"
          DOT "."
          WORD "Ok"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootEnumMatch"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "s"
        COLON ":"
        TYPE_EXPR "Status"
          WORD "Status"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "s"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "Status.Ok"
              WORD "Status"
              DOT "."
              WORD "Ok"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "Status.Failed"
              WORD "Status"
              DOT "."
              WORD "Failed"
            FAT_ARROW "=>"
            STRING_LITERAL "failed"
              QUOTE """
              WORD "failed"
              QUOTE """
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "Status.Pending"
              WORD "Status"
              DOT "."
              WORD "Pending"
            FAT_ARROW "=>"
            STRING_LITERAL "pending"
              QUOTE """
              WORD "pending"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootAliasParam"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "ConfigAlias"
          WORD "ConfigAlias"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.key"
          WORD "cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootThrowClass"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              OBJECT_LITERAL
                WORD "Error"
                L_BRACE "{"
                OBJECT_FIELD "code: 500"
                  WORD "code"
                  COLON ":"
                  INTEGER_LITERAL "500"
                COMMA ","
                OBJECT_FIELD
                  WORD "message"
                  COLON ":"
                  STRING_LITERAL "root error"
                    QUOTE """
                    WORD "root"
                    WORD "error"
                    QUOTE """
                R_BRACE "}"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootThrowEnum"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "x"
        COLON ":"
        TYPE_EXPR "int"
          WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        MATCH_EXPR
          KW_MATCH "match"
          L_PAREN "("
          WORD "x"
          R_PAREN ")"
          L_BRACE "{"
          MATCH_ARM
            MATCH_PATTERN "0"
              INTEGER_LITERAL "0"
            FAT_ARROW "=>"
            THROW_EXPR
              KW_THROW "throw"
              PATH_EXPR "Status.Failed"
                WORD "Status"
                DOT "."
                WORD "Failed"
            COMMA ","
          MATCH_ARM
            MATCH_PATTERN "_"
              WORD "_"
            FAT_ARROW "=>"
            STRING_LITERAL "ok"
              QUOTE """
              WORD "ok"
              QUOTE """
          R_BRACE "}"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesLlmConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.llm.Config"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.model"
          WORD "cfg"
          DOT "."
          WORD "model"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesLlmError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "e"
        COLON ":"
        TYPE_EXPR "root.llm.Error"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "e.reason"
          WORD "e"
          DOT "."
          WORD "reason"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesLlmStatus"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "root.llm.Status"
      WORD "root"
      DOT "."
      WORD "llm"
      DOT "."
      WORD "Status"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root.llm.Status.Ready"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Status"
          DOT "."
          WORD "Ready"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesAuthConfig"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "cfg"
        COLON ":"
        TYPE_EXPR "root.auth.Config"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "cfg.provider"
          WORD "cfg"
          DOT "."
          WORD "provider"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesAuthError"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "e"
        COLON ":"
        TYPE_EXPR "root.auth.Error"
          WORD "root"
          DOT "."
          WORD "auth"
          DOT "."
          WORD "Error"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "e.realm"
          WORD "e"
          DOT "."
          WORD "realm"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootUsesNestedClient"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "c"
        COLON ":"
        TYPE_EXPR "root.llm.openai.Client"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "openai"
          DOT "."
          WORD "Client"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "c.api_key"
          WORD "c"
          DOT "."
          WORD "api_key"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "RootMixedConfigs"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "root_cfg"
        COLON ":"
        TYPE_EXPR "Config"
          WORD "Config"
      COMMA ","
      PARAMETER
        WORD "llm_cfg"
        COLON ":"
        TYPE_EXPR "root.llm.Config"
          WORD "root"
          DOT "."
          WORD "llm"
          DOT "."
          WORD "Config"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "string"
      WORD "string"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        PATH_EXPR "root_cfg.key"
          WORD "root_cfg"
          DOT "."
          WORD "key"
        R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "RootWithCrossNsFields"
    L_BRACE "{"
    FIELD
      WORD "own_config"
      TYPE_EXPR "Config"
        WORD "Config"
    FIELD
      WORD "llm_config"
      TYPE_EXPR "root.llm.Config"
        WORD "root"
        DOT "."
        WORD "llm"
        DOT "."
        WORD "Config"
    FIELD
      WORD "auth_config"
      TYPE_EXPR "root.auth.Config"
        WORD "root"
        DOT "."
        WORD "auth"
        DOT "."
        WORD "Config"
    FIELD
      WORD "llm_response"
      TYPE_EXPR "root.llm.Response"
        WORD "root"
        DOT "."
        WORD "llm"
        DOT "."
        WORD "Response"
    FIELD
      WORD "nested_client"
      TYPE_EXPR "root.llm.openai.Client"
        WORD "root"
        DOT "."
        WORD "llm"
        DOT "."
        WORD "openai"
        DOT "."
        WORD "Client"
    FIELD
      WORD "own_status"
      TYPE_EXPR "Status"
        WORD "Status"
    FIELD
      WORD "own_alias"
      TYPE_EXPR "ConfigAlias"
        WORD "ConfigAlias"
    R_BRACE "}"
  CLASS_DEF
    KW_CLASS "class"
    WORD "RootWithCrossNsAlias"
    L_BRACE "{"
    FIELD
      WORD "llm_alias"
      TYPE_EXPR "root.llm.ResponseAlias"
        WORD "root"
        DOT "."
        WORD "llm"
        DOT "."
        WORD "ResponseAlias"
    FIELD
      WORD "own_alias"
      TYPE_EXPR "ConfigAlias"
        WORD "ConfigAlias"
    R_BRACE "}"

=== ERRORS ===
None
